fixed header spacing

--- a/angular/src/app/components/landing-page/landing-page.component.css
+++ b/angular/src/app/components/landing-page/landing-page.component.css
@@ -9,10 +9,7 @@
 }
 
 .landing-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   padding: 25px 65px;
   width: 100%;
+  margin: auto;
 }
