--- a/angular/src/app/components/selection-page/selection-page.component.css
+++ b/angular/src/app/components/selection-page/selection-page.component.css
@@ -5,12 +5,9 @@
 }
 
 .selection-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
     padding: 25px 65px;
     width: 100%;
+    margin: auto;
 }
 
 .main-container {
